MB-41914: Only calculate resident percentage when numItems > nonResident

UBSAN flags an issue that occurs when numItems currently less than
nonResident (during warmup).

Old code:

size_t getMemResidentPer() {
    size_t numResident = numItems - nonResident;
    return (numItems != 0) ? (size_t)(numResident * 100.0) / (numItems)
                           : 100;
}

Here 'numItems - nonResident' can result in a negative value (underflow)
resulting in '(size_t)(numResident * 100.0)' being flagged as a failure
as it now cannot be converted back to size_t.

This change only does the calculation when numItems >= nonResident so
we don't generate a large numResident.

Change-Id: Ia9f7314ef7b979f073400b291c141c8953a18055
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/138399
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>